--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,4 +3,6 @@
 @import "./components/header";
 @import "./components/navigation";
 @import "./components/logo";
-@import "./components/header-contacts"
+@import "./components/header-contacts";
+@import "./components/herro";
+@import "./components/peculiarities"
