--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,4 +5,5 @@
 @import "./components/logo";
 @import "./components/header-contacts";
 @import "./components/herro";
-@import "./components/peculiarities"
+@import "./components/peculiarities";
+@import "./components/works"
