team cards refactored

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,4 +6,7 @@
 @import "./components/header-contacts";
 @import "./components/herro";
 @import "./components/peculiarities";
-@import "./components/works"
+@import "./components/works";
+@import "./components/team";
+@import "./components/team-card";
+@import "./components/sotial-links"
