--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,4 +9,5 @@
 @import "./components/works";
 @import "./components/team";
 @import "./components/team-card";
-@import "./components/sotial-links"
+@import "./components/sotial-links";
+@import "./components/clients";
