--- a/sass/components/_sotial-links.scss
+++ b/sass/components/_sotial-links.scss
@@ -32,3 +32,10 @@
         }
     }
 }
+
+.footer-sotial-links__link{
+    background-color: $iconsTranspered;
+}
+.footer-sotial-links__icon{
+    fill: $fontWhite;
+}
