--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,3 +11,5 @@
 @import "./components/team-card";
 @import "./components/sotial-links";
 @import "./components/clients";
+@import "./components/footer";
+@import "./components/addres"
