--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,4 +12,8 @@
 @import "./components/sotial-links";
 @import "./components/clients";
 @import "./components/footer";
-@import "./components/addres"
+@import "./components/addres";
+@import "./components/subscription";
+@import "./components/modal";
+@import "./components/close-button";
+@import "./components/chackbox"
