--- a/sass/utils/_base.scss
+++ b/sass/utils/_base.scss
@@ -58,3 +58,63 @@
     padding-bottom: 94px;
     padding-top: 94px;
   }
+
+  .form-submit-button{
+    margin-top: 30px;
+    padding: 10px 55px;
+
+    margin-left: auto;
+    margin-right: auto;
+
+    display: block;
+    background-color: $accentColor;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-color: transparent;
+    border-radius: 4px;
+
+    color: $fontWhite;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 0.06em;
+  }
+
+  .is-hidden{
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: unset;
+  }
+
+  .modal-overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+  
+    width: 100%;
+    height: 100%;
+  
+    background-color:rgba(0, 0, 0, 0.2);
+    transform: perspective(3px);
+  }
+
+  .outAnimation{
+    animation-name: animation;
+    animation-duration: 500ms;
+    animation-direction: reverse;
+  }
+  
+  .inAnimation{
+    animation-name: animation;
+    animation-duration: 500ms;
+  }
+  
+  @keyframes animation{
+    0%{
+      transform:perspective(1000px) scale(0%, 0%) rotateY(90deg);
+    }
+    100%{
+      transform:perspective(1000px) scale(100%, 100%) rotateY(0deg); 
+    }
+  }
