--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,4 +16,6 @@
 @import "./components/subscription";
 @import "./components/modal";
 @import "./components/close-button";
-@import "./components/chackbox"
+@import "./components/chackbox";
+@import "./components/productes";
+@import "./components/button-list";
