--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -17,8 +17,8 @@
   
     font-weight: 500;
     font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
+    // line-height: 1.14;
+    // letter-spacing: 0.02em;
     text-decoration: none;
     color: $fontBlack1;
   
@@ -32,7 +32,7 @@
     &.is-active::before{
         content: "";
         position: absolute;
-        bottom: calc(0% - 25px);
+        bottom: calc(0% - 26px);
         left: 0px;
       
       
